tests/semantic/valid/08_local_shadowing.tc
int x = 1;
int main(void) {
    int x = 2;
    return x;
}
